--- a/aula03/index.html
+++ b/aula03/index.html
@@ -21,4 +21,16 @@
     </picture>
 </body>
 
+<body>
+    <h1>desafio de imagem</h1>
+    <img src="guarapari.jpg" alt="guarapari">
+    <figcaption>cidade de guarapari</figcaption>
+    <hr>
+    <br>
+    <picture>
+        <source media="(max-width: 767px)" srcset="guarapari.png">
+        <source media="(min-width: 768px)" srcset="peracanga.png">
+        <img src="guarapari.jpg" alt="peracanga.png">
+    </picture>
+</body>
 </html>
