--- a/Aula14/index.html
+++ b/Aula14/index.html
@@ -2,106 +2,79 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Pessoa Física</title>
 </head>
 <body>
-    <h2>Cadastro de Pessoa Física</h2>
+
+    <h1>Cadastro de Pessoa Física</h1>
 
     <form>
-        <table border="0" cellpadding="5">
-            <tr>
-                <td><label for="nome">Nome Completo:</label></td>
-                <td><input type="text" id="nome" name="nome"></td>
-            </tr>
-            <tr>
-                <td><label for="nascimento">Data de Nascimento:</label></td>
-                <td><input type="date" id="nascimento" name="nascimento"></td>
-            </tr>
-            <tr>
-                <td><label for="cpf">CPF:</label></td>
-                <td><input type="text" id="cpf" name="cpf" maxlength="14"></td>
-            </tr>
-            <tr>
-                <td><label for="rg">RG / Documento:</label></td>
-                <td><input type="text" id="rg" name="rg"></td>
-            </tr>
-            <tr>
-                <td><label for="mae">Filiação (Nome da Mãe):</label></td>
-                <td><input type="text" id="mae" name="mae"></td>
-            </tr>
-            <tr>
-                <td><label for="pai">Filiação (Nome do Pai):</label></td>
-                <td><input type="text" id="pai" name="pai"></td>
-            </tr>
 
-            <tr><td colspan="2" align="center"><strong>--- Endereço ---</strong></td></tr>
+        <label>Nome Completo:</label>
+        <input type="text" placeholder="Digite aqui"><br><br>
 
-            <tr>
-                <td><label for="logradouro">Logradouro:</label></td>
-                <td><input type="text" id="logradouro" name="logradouro"></td>
-            </tr>
-            <tr>
-                <td><label for="numero">Número:</label></td>
-                <td><input type="text" id="numero" name="numero"></td>
-            </tr>
-            <tr>
-                <td><label for="bairro">Bairro:</label></td>
-                <td><input type="text" id="bairro" name="bairro"></td>
-            </tr>
-            <tr>
-                <td><label for="complemento">Complemento:</label></td>
-                <td><input type="text" id="complemento" name="complemento"></td>
-            </tr>
-            <tr>
-                <td><label for="cidade">Cidade:</label></td>
-                <td><input type="text" id="cidade" name="cidade"></td>
-            </tr>
-            <tr>
-                <td><label for="estado">Estado:</label></td>
-                <td><input type="text" id="estado" name="estado" maxlength="2"></td>
-            </tr>
-            <tr>
-                <td><label for="cep">CEP:</label></td>
-                <td><input type="text" id="cep" name="cep" maxlength="9"></td>
-            </tr>
+        <label>Data de Nascimento:</label>
+        <input type="date" placeholder="00/00/0000"><br><br>
 
-            <tr>
-                <td><label for="telefone">Telefone:</label></td>
-                <td><input type="tel" id="telefone" name="telefone"></td>
-            </tr>
-            <tr>
-                <td><label for="celular">Celular:</label></td>
-                <td><input type="tel" id="celular" name="celular"></td>
-            </tr>
-            <tr>
-                <td><label for="email1">E-mail Principal:</label></td>
-                <td><input type="email" id="email1" name="email1"></td>
-            </tr>
-            <tr>
-                <td><label for="email2">E-mail Secundário:</label></td>
-                <td><input type="email" id="email2" name="email2"></td>
-            </tr>
-            <tr>
-                <td><label for="senha">Senha:</label></td>
-                <td><input type="password" id="senha" name="senha"></td>
-            </tr>
-            <tr>
-                <td><label for="cor">Cor Preferida:</label></td>
-                <td><input type="color" id="cor" name="cor"></td>
-            </tr>
-            <tr>
-                <td><label for="observacoes">Observações:</label></td>
-                <td><textarea id="observacoes" name="observacoes" rows="4" cols="40"></textarea></td>
-            </tr>
+        <label>CPF:</label>
+        <input type="text" placeholder="Digite aqui"><br><br>
 
-            <tr>
-                <td colspan="2" align="center">
-                    <input type="submit" value="Cadastrar">
-                    <input type="reset" value="Limpar">
-                </td>
-            </tr>
-        </table>
-    </form>
-</body>
-</html>
+        <label>RG / Documento:</label>
+        <input type="text" placeholder="Digite aqui"><br><br>
+
+        <label>Filiação (Nome da mãe):</label>
+        <input type="text" placeholder="Digite aqui"><br><br>
+
+        <label>Filiação (Nome do pai):</label>
+        <input type="text" placeholder="Digite aqui"><br><br>
+
+        <label>Logradouro:</label>
+        <input type="text" placeholder="000"><br><br>
+
+        <label>Número:</label>
+        <input type="text" placeholder="0000"><br><br>
+
+        <label>Bairro:</label>
+        <input type="text" placeholder="Digite aqui" ><br><br>
+
+        <label>Complemento:</label>
+        <input type="text" placeholder="Digite aqui"><br><br>
+
+        <label>Cidade:</label>
+        <input type="text" placeholder="Preencha este campo."><br><br>
+
+        <label>Estado:</label>
+        <input type="text" placeholder="Digite aqui"><br><br>
+
+        <label>CEP:</label>
+        <input type="text" placeholder="00000-000"><br><br>
+
+        <label>Telefone:</label>
+        <input type="text" placeholder="(00) 0000-0000"><br><br>
+
+        <label>Celular:</label>
+        <input type="text" placeholder="(00) 90000-0000"><br><br>
+
+        <label>E-mail Principal:</label>
+        <input type="email"placeholder="Digite aqui"><br><br>
+
+        <label>E-mail Secundário:</label>
+        <input type="email" placeholder="Digite aqui"><br><br>
+
+        <label>Senha:</label>
+        <input type="Senha" placeholder="Digite aqui"><br><br>
+
+        <label>Cor Preferida:</label>
+        <input type="color" placeholder="Digite aqui"><br><br>
+
+        <label>Informações adicionais:</label><br>
+        <textarea rows="3" cols="50" placeholder="Digite aqui informações adicionais..."></textarea><br><br>
+
+        <label>Observações:</label><br>
+        <textarea rows="2" cols="50" placeholder="Digite observações..."></textarea><br><br>
+
+        <button type="submit">Cadastrar</button>
+        <button type="reset">Limpar</button><br><br>
+
+        <label>Texto Endereco</label>
+
